unpackaged/main/default/objects/Costs_and_Charges__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R</fullName>
                <default>true</default>
                <label>R</label>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>OSA</fullName>
            </value>
            <value>
                <fullName>SR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>