unpackaged/main/default/objects/Costs_and_Charges__c/fields/Simple_Charge_Labour__c.field-meta.xml
<CustomField>
    <fullName>Simple_Charge_Labour__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Simple Charge Labour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>