unpackaged/main/default/objects/Costs_and_Charges__c/fields/Simple_Charge_Other__c.field-meta.xml
<CustomField>
    <fullName>Simple_Charge_Other__c</fullName>
    <label>Simple Charge Other</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>