unpackaged/main/default/objects/Costs_and_Charges__c/fields/Simple_Cost_Materials__c.field-meta.xml
<CustomField>
    <fullName>Simple_Cost_Materials__c</fullName>
    <label>Simple Cost Materials</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>