unpackaged/main/default/objects/Costs_and_Charges__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The Status of the Costs and Charges record</description>
    <inlineHelpText>The Status of the Costs and Charges record</inlineHelpText>
    <label>C&amp;C Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Info Incomplete</fullName>
                <default>true</default>
                <label>Info Incomplete</label>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Info Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>