unpackaged/main/default/objects/Costs_and_Charges__c/fields/Test_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Field__c</fullName>
    <label>Test Field</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>