unpackaged/main/default/objects/Costs_and_Charges__c/fields/Unit_of_Charge__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Charge__c</fullName>
    <description>The unit (in hours) used to convert engineer on/off site times into chargeable duration.</description>
    <inlineHelpText>The unit (in hours) used to convert engineer on/off site times into chargeable duration.</inlineHelpText>
    <label>Unit of Charge</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>